k8s-kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapplication-deploy
  namespace: jobapp-namespace
spec:
  # securityContext:
  #   fsGroup: 1000
  selector:
    matchLabels:
      app: jobapplication-k8s-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: jobapplication-k8s-mysql
    spec:
      containers:
      - name: jobapplication-k8s
        image: thiernos/jobappimage
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        args:
        - /server
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: true
        #   runAsNonRoot: true
        #   capabilities:
        #     drop:
        #     - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: jobapplication-svc
  namespace: jobapp-namespace
spec:
  selector:
    app: jobapplication-k8s-mysql
  ports:
  - name: http
    protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: NodePort
